Regression: New OBJ Exporter Incorrectly saving the materials in the MTL (materials) file, extra space before texture files #96763

Closed
opened 2022-03-24 17:51:49 +01:00 by Alexandre Mano · 14 comments

System Information
Operating system: Windows 10
Graphics card: RTX2060

Blender Version
Broken: 3.2.0 Alpha (98d4872d7f)
Worked: 3.00 Alpha (d7b231baa8)

After exporting a model with the new Obj exporter, the MTL materials file of said model is incapable of correctly linking to the needed texture files.
In the produced MTL file, the line with "map_Kd" is written with an extra space in between the map_Kd call and the texture file, which results in some programs like "Microsoft 3D Builder" being unable to import said texture.

Exact steps for others to reproduce the error
In Blender 3.20, export any mesh model with a material linking to a diffuse texture file. Openning it in another 3d file viewer program (for example Microsoft 3D Builder or 3D Viewer) will cause texture issues.

**System Information** Operating system: Windows 10 Graphics card: RTX2060 **Blender Version** Broken: 3.2.0 Alpha (98d4872d7f42) Worked: 3.00 Alpha (d7b231baa87e) After exporting a model with the new Obj exporter, the MTL materials file of said model is incapable of correctly linking to the needed texture files. In the produced MTL file, the line with "map_Kd" is written with an extra space in between the map_Kd call and the texture file, which results in some programs like "Microsoft 3D Builder" being unable to import said texture. **Exact steps for others to reproduce the error** In Blender 3.20, export any mesh model with a material linking to a diffuse texture file. Openning it in another 3d file viewer program (for example Microsoft 3D Builder or 3D Viewer) will cause texture issues.
Author

Added subscriber: @Xande

Added subscriber: @Xande
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this behavior. It is unclear if the specification mandate a single space, but this seems like an easy fix, so confirming.

I can confirm this behavior. It is unclear if the specification mandate a single space, but this seems like an easy fix, so confirming.
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

somewhere in the code is written that file names can also have leading spaces, so only one space should be used for disambiguation

somewhere in the code is written that file names can also have leading spaces, so only one space should be used for disambiguation
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Well, if this is a regression, it should be High prio I think.

Well, if this is a regression, it should be High prio I think.
Philipp Oeser changed title from New OBJ Exporter Incorrectly saving the materials in the MTL (materials) file, extra space before texture files to Regression: New OBJ Exporter Incorrectly saving the materials in the MTL (materials) file, extra space before texture files 2022-03-25 14:57:40 +01:00

Added subscriber: @aras_p

Added subscriber: @aras_p
Aras Pranckevicius self-assigned this 2022-03-30 11:27:46 +02:00

Yeah, I see the problem. There's a code comment saying "make sure to emit only one space" and the code right below it proceeds to emit two spaces :) I'll fix this.

Yeah, I see the problem. There's a code comment saying "make sure to emit only one space" and the code right below it proceeds to emit two spaces :) I'll fix this.
Author

Nice, thanks! It's very easy to fix the files after exporting, but without previous knowledge of the bug it could be confused with user error during model preparation (I sure did for a while).

Nice, thanks! It's very easy to fix the files after exporting, but without previous knowledge of the bug it could be confused with user error during model preparation (I sure did for a while).

Note to self: while trying to fix this and add test coverage, I noticed some other issues with .mtl export that I'll try to fix in the same revision:

  • Emissive texture map (map_Ke) is not exported,
  • When Mapping node is used on the texture UVs, the "Location" and "Scale" values were mixed up (location written as "scale", scale written as "location),
  • The texture filenames are always written as being in the same folder, effectively as if "Path Mode: Strip Path" option was used in the old exporter. The path mode setting is gone in the new exporter, seemingly accidentally, I'll try to bring it back.
Note to self: while trying to fix this and add test coverage, I noticed some other issues with .mtl export that I'll try to fix in the same revision: - Emissive texture map (map_Ke) is not exported, - When Mapping node is used on the texture UVs, the "Location" and "Scale" values were mixed up (location written as "scale", scale written as "location), - The texture filenames are always written as being in the same folder, effectively as if "Path Mode: Strip Path" option was used in the old exporter. The path mode setting is gone in the new exporter, seemingly accidentally, I'll try to bring it back.

This issue was referenced by d120a083da

This issue was referenced by d120a083da1f4bbead4895209dd064d1455bc7d6

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96763
No description provided.