source/blender/io/wavefront_obj/exporter/obj_export_mtl.cc
@@ -287,14 +287,15 @@ static void store_image_textures(const nodes::NodeRef *bsdf_node,
       /* Find sockets linked to "Color" socket in normal map node. */
       linked_sockets_to_dest_id(normal_map_node, *node_tree, "Color", linked_sockets);
     }
-    else if (texture_map.key == eMTLSyntaxElement::map_Ke) {
-      float emission_strength = 0.0f;
-      copy_property_from_node(SOCK_FLOAT, bnode, "Emission Strength", {&emission_strength, 1});
-      if (emission_strength == 0.0f) {
-        continue;
-      }
-    }
     else {
+      /* Skip emission map if emission strength is zero. */
+      if (texture_map.key == eMTLSyntaxElement::map_Ke) {
+        float emission_strength = 0.0f;
+        copy_property_from_node(SOCK_FLOAT, bnode, "Emission Strength", {&emission_strength, 1});
+        if (emission_strength == 0.0f) {
+          continue;
+        }
+      }
       /* Find sockets linked to the destination socket of interest, in P-BSDF node. */
       linked_sockets_to_dest_id(
           bnode, *node_tree, texture_map.value.dest_socket_id, linked_sockets);
